[tool.poetry]
name = "fastapi+kafka-websockets"
version = "0.1.0"
description = ""
authors = ["vladmialkin <myalkin.vlad@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
motor = "^3.5.1"
uvicorn = {extras = ["all"], version = "^0.30.1"}
ipython = "^8.26.0"
pytest = "^8.2.2"
faker = "^26.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
